# matplotlib-backend-notcurses

./: README.md  __init__.py  pyproject.toml  setup.cfg
matplotlib-backend-notcurses/: __init__.py
