[metadata]
name = matplotlib-backend-notcurses
version = 1.0.1
description = show matplotlib plots inline in most terminals, via notcurses
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jktr/matplotlib-backend-notcurses
classifiers =
    Programming Language :: Python :: 3
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Framework :: Matplotlib
    Topic :: Terminals

[options]
packages = matplotlib-backend-notcurses
install_requires = 
    matplotlib
